Contrast and brightness works open issues: - current image is used when changing values (instead of original image data) - auto and manual image process should be able to work together - each algorithm do loop on image data separately (can perform better) - when control change while in process - older threads should be killed

--- a/src/app/packages/core/less/z-index-globals.less
+++ b/src/app/packages/core/less/z-index-globals.less
@@ -8,6 +8,7 @@
 @z-index-tooltip-after: 2;
 @z-index-case-menu: 2;
 @z-index-annotations-control: 2;
+@z-index-image-processing-control: 2;
 @z-index-tools-tooltiptext: 2;
 @z-index-imageries-active-border: 4;
 @z-index-context-menu-sub-buttons-list: 5;
